w2 assignment css contrast issue fix

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -72,8 +72,8 @@ nav a {
 }
 
 .active, nav a:hover {
+    text-decoration: underline;
     background-color: rgb(0, 100, 0, 0.5);
-    color: var(--color4);
 }
 
 .show li {
